<resources>
    <string name="app_name">Loan Credit Score </string>
    <string name="banner">216146852844993_216147202844958</string>
    <string name="banner1">216146852844993_216147746178237</string>
    <string name="nb">216146852844993_216147096178302</string>
    <string name="nb1">216146852844993_216147639511581</string>
    <string name="nv">216146852844993_216146996178312</string>
    <string name="mediumrec1">216146852844993_216147609511584</string>
    <string name="ins">216146852844993_216147159511629</string>
    <string name="ins1">216146852844993_216147682844910</string>
    <string name="icon_desc">Native AD</string>
    <string name="ABT">Developers</string>
    <string name="ABT_Info">This application was developed by Promotheus Software Solution .Our aim to Help who instrested to Chech his/her Credit Score </string>
    <string name="hint_principal">Principal Amount ₹</string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI ₹</string>
    <string name="hint_interest_total">Total Interest for Loan ₹</string>
    <string name="one">1</string>
    <string name="duration_year">Duration (year)</string>
    <string name="enter_interest_rate">Enter interest rate</string>
    <string name="enter_down_payment_amount">Enter down payment amount</string>
    <string name="enter_purchase_price">Enter purchase price</string>
    <string name="cibil_score">Cibil Score</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="generate_credit_score">Generate Credit Score</string>
    <string name="about_us">About Us</string>
    <string name="calculate">Calculate</string>
    <string-array name="provincedescription">
        <item>"\nट्रांसयूनियन सिबिल लिमिटेड भारत की पहली क्रेडिट इन्फॉर्मेशन कंपनी है जिसे सामान्य रूप से क्रेडिट ब्यूरो भी कहा जाता है,\n\n☑ हम व्यक्तियों और गैर-व्यक्तियों (वाणिज्यक निकायों) के लोन और क्रेडिट कार्डस से संबंधित भुगतानों के रेकार्डस्‌ जुटाते और रखते हैं. \n\n☑ये रिकार्डस्‌ बैंको और अन्य लेंडर्स द्वारा मासिक आधार पर हमारे पास जमा किए जाते हैं. \n\n☑इस जानकारी का उपयोग करके क्रेडिट इन्फोर्मेशन रिपोर्ट (सीआईआर) तथा क्रेडिट स्कोर विकसित किया जाता है, जिनकी बदौलत लेंडर्स लोन आवेदनों का मूल्यांकन और स्वीकृत करते हैं. \n\n☑क्रेडिट ब्यूरो को आरबीआई द्वारा अनुज्ञप्त किया जाता है और क्रेडिट इन्फोर्मेशन कंपनीज़ (रेगुलेशन) एक्ट ऑफ 2005 द्वारा अधिशासित किया जाता है."</item>

        <item>"\nसबिल स्कोर लोन आवेदन प्रक्रिया में महत्वपूर्ण भूमिका निभाता है. \n✔आवेदक द्वारा आवेदन पत्र भरने और उसे कर्जदाता को सौंपने के बाद कर्जदाता पहले आवेदक के क्रेडिट स्कोर और क्रेडिट रिपोर्ट की जॉंच करता है.\n\n✔ यदि क्रेडिट स्कोर कम है तो कर्जदाता शायद आगे आवेदन पर विचार भी न करे और उसी क्षण उसे अस्वीकृत कर दे.\n ✔यदि क्रेडिट स्कोर अधिक होता है तो कर्जदाता आवेदन पर विचार करता है तथा यह तय करने के लिए अन्य विवरणों पर विचार करता है कि आवेदन क्रेडिट के योग्य है या नहीं. \n\n✔क्रेडिट स्कोर कर्जदाता के लिए पहले प्रभाव के रूप में कार्य करता है, स्कोर जितना अधिक होता है, \n\n✔लोन पर समीक्षा किए जाने और स्वीकृत होने की संभावनाएँ भी उतनी ही बेहतर होती है.\n\n✔ कर्ज देने का निर्णय केवल कर्जदाता पर निर्भर होता है और लोन/क्रेडिट कार्ड स्वीकृत हो या ना हो, इसपर सिबिल कोई फैसला नहीं करता."</item>


        <item>"\nआप अच्छा क्रेडिट इतिहास बरकरार रखते हुए अपने क्रेडिट स्कोर को सुधार सकते हैं.\n इसे कर्जदाताओं द्वारा सकारात्मक रूप से देखा जा सकता है और इसे 6 सरल नियमों के साथ किया जा सकता है :\n\n


\n✬हमेशा अपनी देय राशि समय पर अदा करें.
\n✬विलंबित भुगतानों को देनदारों द्वारा नकारात्मक रूप से देखा जाता है.
\n✬अपने बैलेंस हमेशा कम रखें.
\n✬अत्यधिक क्रेडिट का उपयोग करना हमेशा उचित नहीं होता, अपने इस उपयोग को नियंत्रित रखें.
\n✬क्रेडिट का स्वस्थ मेल बरकरार रखें.
\n✬संरक्षित (जैसे होम लोन, ऑटो लोन) और असंरक्षित लोन्स (जैसे पसर्नल लोन, क्रेडिट कार्डस) का स्वस्थ मेल रखना बेहतर है. बहुत अधिक असंरक्षित लोन्स को नकारात्मक रूप से देखा जा सकता है.
\n✬नए क्रेडिट का आवेदन मध्यम तरीके से करें.
\n✬आप क्रेडिट को अत्यधिक आवश्यकता के रूप में नहीं दिखाएं, नई क्रेडिट के लिए सावधानी से आवेदन करें.
\n✬अपने सह हस्ताक्षरकर्ता, गारंटीशुदा और संयुक्त अकाउंट्स की निगरानी मासिक रूप से करें.
\n✬सह- हस्ताक्षरकर्ता, गारंटीशुदा या संयुक्त रूप से धारित खातों में हुए गलत भुगतानों के लिए आपको बराबर का जिम्मेदार माना जाता है. आपके सह धारक (या गारंटीड व्यक्ति) की लापरवाही आपके ज़रूरत के समय में क्रेडिट पाने के लिए आपकी क्षमता को प्रभावित कर सकती है.
\n✬पूरे वर्ष अपने क्रेडिट इतिहास की बार-बार समीक्षा करते रहें.
\n✬लोन आवेदन की अस्वीकृति जैसे दुर्भाग्यपूर्ण प्रसंगों को टालने के लिए समय-समय पर अपनी सीआईआर खरीदते रहें."</item>


        <item>"4 प्रमुख कारक आपके स्कोर को प्रभावित करते हैं.\n\n


\n✧भुगतान का इतिहास.\n\n
विलंब से भुगतान करना या आपकी ईएमआई में त्रुटि होना या बकाया रहना (हाल में या लगातार) दिखाता है कि अपनी मौजूदा क्रेडिट बाध्यताओं को अदा करने में आपको परेशानी हो रही है और यह आपके स्कोर को नकारात्मक रूप से प्रभावित करता है.
\n✧क्रेडिट सीमा का अधिक उपयोग.\n\n
\nअपने क्रेडिट कार्ड पर बढ़ा हुआ खर्च ज़रूरी नहीं है कि आपके स्कोर को नकारात्मक रूप से प्रभावित करेगा, वहीं दूसरी ओर आपके क्रेडिट कार्ड के मौजूदा बैलेंस में बढ़ोतरी होना चुकता करने के बढ़े हुए भार का संकेत करता है और आपके स्कोर को नकारात्मक रूप से प्रभावित कर सकता है.
\n✧क्रेडिट कार्डस या व्यक्तिगत (पसर्नल) लोन्स का उच्चतर प्रतिशत (जिसे असंरक्षित लोन के रूप में भी जाना जाता है)
\nसंरक्षित लोन्स (जैसे ऑटो, होम लोन, और असंरक्षित लोन (जैसे पर्सनल लोन, क्रेडिट कार्ड, के बीच संतुलन रखने से आपके स्कोर पर अधिक सकारात्मक प्रभाव पड़ने की संभावना होती है.
\n✧हाल ही में कई नए खाते खोलना.
\nयदि आपको हाल ही में विविध लोन्स और क्रेडिटस कार्डस की स्वीकृति मिली है तो देनदार आपके आवेदन को सावधानी से देखेंगे क्योंकि यह आचरण संकेत करता है कि आपके ऋण का भार बढ़ चुका है, जो आपके स्कोर को नकारात्मक रूप से प्रभावित करेगा.
"</item>


        <item>"\nसिबिल रिकार्डस को मिटा या बदल नहीं सकती जो आपके सीआईआर को अपने आप प्रतिबिंबित करती हैं,\n हम केवल अपने सदस्यों (बैंकों और वित्तीय संस्थानों) द्वारा प्रदान किए गए व्यक्तियों के रिकार्डस जुटाते हैं.\n इसमें ‘अच्छी’ और ‘बुरी’ क्रेडिट या दोषी व्यक्तियों की सूची भी नहीं होती."</item>

        <item>"लागू नहीं या एनएच का स्कोर होना बिलकुल बुरी बात नहीं है. इसका अर्थ निम्नलिखित में से एक होता हैं :\n\n


\n✰आपको कोई क्रेडिट इतिहास नहीं है या स्कोर करने के लिए आपका क्रेडिट इतिहास पर्याप्त नहीं हैं, यानी आप क्रेडिट सिस्टम में नए हैं
\n✰पिछले दो वर्षों में आपने कोई क्रेडिट गतिविधि नहीं की है.
\n✰आपके पास सभी ऐड-ऑन क्रेडिट कार्डस हैं और आप क्रेडिट के लिए उन्मुख नहीं हुए है.
\n✰यह महत्वपूर्ण है कि इन स्कोर्स को कर्जदाता द्वारा नकारात्मक रूप से नहीं देखा जाता, लेकिन कुछ कर्जदाताओं को क्रेडिट नीति “एनए” या “एनएच” स्कोर वाले आवेदक को कर्ज देने से रोकती है (कोई क्रेडिट ट्रैक रिकार्डर ना रखने वाले आवेदक) अतएव आपको अन्य स्थान पर लोन के लिए आवेदन करने की बेहतर संभावना हो सकती है."</item>


        <item>"सिबिल ट्रांसयूनियन स्कोर 2.0 क्रेडिट स्कोर का एक नया, अद्यतनीकृत संस्करण है जिसे उपभोक्ता प्रोफाइल्स और क्रेडिट डाटा के वर्तमान रूझानों व बदलावों को ध्यान में रखते हुए बनाया गया है. बैंक धीरे-धीरे नए संस्करण को अपना रहे हैं और पिछले संस्करण की तुलना में आपको नए संस्करण में एक अंतर मिल सकता है (यानी स्कोर 2-0 पिछले संस्करण की तुलना में कमतर हो सकता है). कृपया ध्यान दें, वर्तमान में आपके लिए उपलब्ध स्कोर पहले वाला संस्करण है. तथापि क्रेडिट स्कोर में अंतर लोन स्वीकृति प्रक्रिया के दौरान क्रेडिट के फैसले कोप्रभावित नहीं करता हैं क्योंकि स्कोर के दोनों संस्करणों में लोन आवेदन की प्रक्रिया के दौरान भिन्न भिन्न स्कोर पात्रता कट ऑफ हो सकती है.


उदाहरण के लिए, यदि आपके बैंक ने पहले व्यक्तियों को लोन/क्रेडिट कार्डस की मंजूरी 800 और अधिक के क्रेडिट स्कोर के साथ दी है तो अब यदि नया संस्करण अपनाया जाता है तो उसका स्कोर कट ऑफ कम हो सकता है


सिबिल ट्रांसयूनियन स्कोर 2.0 ने उन व्यक्तियों के लिए जोखिम इंडेक्स स्कोर भी प्रस्तुत किया है जिनका क्रेडिट इतिहास 6 माह से कम है. इन व्यक्तियों को पिछले संस्क%"</item>

    </string-array>
</resources>